--- a/inlinecss.html
+++ b/inlinecss.html
@@ -1,25 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="texttransform" href="texttransform.html">
-    <style>
-        h1{
-            text-align:center;
-            text-transform:uppercase;
-            color:blue;
-            background-color:red;
-            
-        } 
-        </style>
-</head>
-
-<body>
-    <h1>Jai Shree Ram</h1>
-
-</body>
-
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+  <meta charset="UTF-8"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <title>E-commerce Navbar</title> 
+  <link rel="stylesheet" href="inlinecss.css"> 
+</head> 
+<body> 
+ 
+  <!-- Navbar --> 
+  <nav class="navbar"> 
+    <div class="logo">United Soviet Socialist Republics Store</div> 
+    <ul class="nav-links"> 
+      <li><a href="#">Home</a></li> 
+      <li><a href="#">Products</a></li> 
+      <li><a href="#">Categories</a></li> 
+      <li><a href="#">Deals</a></li> 
+      <li><a href="#">Contact</a></li> 
+    </ul> 
+    <div class="actions"> 
+      <a href="#">Cart 🛒</a> 
+      <a href="#">Login</a> 
+    </div> 
+  </nav> 
+ 
+  <section  style="text-align: center; margin-top: 50px; color: brown;"> 
+    <h1>Welcome to USSR!!</h1> 
+    <p>Your one-stop destination for all Socialist shopping needs.</p> 
+  </section> 
+ 
+</body> 
 </html>
